Fri Jan 10 18:57:58 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any.cpp:
        * tao/Any.h:
        * tao/CDR_Encaps_Codec.cpp:
        * tao/NVList.cpp:
        * tao/RequestInfo_Util.cpp:
        * tao/append.cpp:
        * tao/skip.cpp:

          Some cleanup of internal incompatibilities with the new
          Any implementation.

Fri Jan 10 11:30:08 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Any_T.inl:

          Removed unnecessary forward declaration.

        * tao/Exception.cpp:
        * tao/Exception.h:

          Added missing stuff related to new Any implementation.

        * tao/GIOPC.cpp:

          Removed bodies of TAO::ObjectKey CDR operators. They are
          now in Object_KeyC.cpp.

        * tao/Object_KeyC.cpp:
        * tao/Object_KeyC.i:
        * tao/PortableInterceptorC.cpp:
        * tao/PortableInterceptorC.h:

          Fixed hand-crafting oversights.

        * tao/Typecode_Constants.cpp:

          Removed ObjectId typecode, since it is now in ObjectIdListC.cpp.

Fri Jan 10 09:53:45 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/ORB.cpp:
        * tao/ORB.h:
        * tao/ORB_Core.cpp:
        * tao/ORB_Core.h:
        * tao/corbafwd.h:

          Removed typedef of ObjectIdList * to ObjectIdList_ptr.
          Only interfaces and some well-known pseudo-objects
          should have the _ptr typedef.

Fri Jan 10 09:30:51 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/ObjectIDList.cpp:
        * tao/ObjectIDList.h:
        * tao/ObjectIDList.i:
        * tao/Services.cpp:
        * tao/Services.h:
        * tao/Services.i:

	  Removed these files containing hand-crafted generated
	  code.

        * tao/ObjectIdListC.cpp:
        * tao/ObjectIdListC.h:
        * tao/ObjectIdListC.i:
        * tao/Services.pidl:
        * tao/ServicesC.cpp:
        * tao/ServicesC.h:
        * tao/ServicesC.i:

	  Replaced the removed files with those above, and added